banner section done

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,4 +28,11 @@
         align-items: center;
     }
 
+    .banner-main{
+        flex-direction: column;
+    }
+
+    .banner-childs{
+        width: 100%;
+    }
 }
