--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,52 @@
 .nav-hamburger-menu {
     display: none;
 }
+
+/* banner section */
+.main-content{
+    max-width: 1200px;
+    margin: 0 auto;
+    /* min-height: 400px; */
+    border: 1px solid #000;
+}
+
+.banner-childs{
+    width: 47%;
+    position: relative;
+}
+
+.banner-childs img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.banner-main{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(242, 242, 242);
+}
+
+.banner-btn{
+    border: 2px solid gray;
+    padding: 10px;
+    background-color: transparent;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.fifty-off{
+    background-color: #00000080;
+    color: white;
+    width: max-content;
+    padding: 10px 60px;
+    font-size: 25px;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+}
