--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,6 +9,11 @@
         margin-top: 20px;
     }
 
+    .popular-main{
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
 }
 
 
@@ -35,4 +40,9 @@
     .banner-childs{
         width: 100%;
     }
+
+    .popular-main{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 }
