--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,28 @@
     right: 50%;
     transform: translate(50%, -50%);
 }
+
+/* popular section */
+.popular-main{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px
+}
+
+.card{
+    padding: 10px;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.14);
+    border-radius: 10px;
+}
+
+.card>div:nth-child(1){
+    /* border: 1px solid red; */
+    height: 270px;
+}
+.card img{
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
+}
