--- a/css/style.css
+++ b/css/style.css
@@ -37,24 +37,24 @@
 }
 
 /* banner section */
-.main-content{
+.main-content {
     max-width: 1200px;
     margin: 0 auto;
     /* min-height: 400px; */
     border: 1px solid #000;
 }
 
-.banner-childs{
+.banner-childs {
     width: 47%;
     position: relative;
 }
 
-.banner-childs img{
+.banner-childs img {
     width: 100%;
     border-radius: 10px;
 }
 
-.banner-main{
+.banner-main {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,7 +64,7 @@
     background-color: rgb(242, 242, 242);
 }
 
-.banner-btn{
+.banner-btn {
     border: 2px solid gray;
     padding: 10px;
     background-color: transparent;
@@ -72,7 +72,7 @@
     margin-top: 10px;
 }
 
-.fifty-off{
+.fifty-off {
     background-color: #00000080;
     color: white;
     width: max-content;
@@ -86,26 +86,87 @@
 }
 
 /* popular section */
-.popular-main{
+.popular-main {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px
 }
 
-.card{
+.card {
     padding: 10px;
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.14);
     border-radius: 10px;
 }
 
-.card>div:nth-child(1){
+.card>div:nth-child(1) {
     /* border: 1px solid red; */
     height: 270px;
 }
-.card img{
+
+.card img {
     width: 100%;
     border-radius: 10px;
     height: 100%;
     object-fit: cover;
+}
+
+/* footer section */
+.footer-main {
+    margin-top: 50px;
+    /* border: 1px solid #000; */
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px;
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.footer-child-1 {
+    /* background-color: red; */
+    grid-column: 1/ span 7;
+    grid-row: 1/ span 6;
+    border-radius: 70px;
+    position: relative;
+}
+
+.footer-child-2 {
+    /* background-color: green; */
+    grid-column: 8/ span 5;
+    grid-row: 1/ span 6;
+    border-radius: 70px;
+    position: relative;
+}
+
+.footer-child-3 {
+    /* background-color: blue; */
+    grid-column: 1/ span 5;
+    grid-row: 7/ span 6;
+    border-radius: 70px;
+    position: relative;
+}
+
+.footer-child-4 {
+    /* background-color: pink; */
+    grid-column: 6/ span 7;
+    border-radius: 70px;
+    grid-row: 7/ span 6;
+    position: relative;
+
+}
+
+.footer-main img {
+    width: 100%;
+    height: 100%;
+    border-radius: 70px;
+    filter: brightness(20%);
+}
+
+.icon {
+    color: white;
+    font-size: 50px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
 }
