--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,67 @@
     object-fit: cover;
 }
 
+/* qna section starts */
+.qna-main {
+    /* border: 1px solid #000; */
+    height: 400px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.qna-child {
+    width: 45%;
+    flex-basis: 200px;
+    /* border: 1px solid red; */
+}
+
+.qna-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.form-container {
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.form-field {
+    width: 48%;
+    margin-top: 20px;
+    /* border: 1px solid green; */
+}
+
+.form-field-textarea {
+    width: 100%;
+    margin-top: 20px;
+
+}
+
+.form-container input,
+textarea,
+select {
+    /* border: 1px solid yellowgreen; */
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+}
+
+.qna-submit-button {
+    background-color: palevioletred;
+    color: white;
+    padding: 20px 70px;
+    border-radius: 20px;
+    border: none;
+    display: block;
+    margin-left: auto;
+}
+
 /* footer section */
 .footer-main {
     margin-top: 50px;
