--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
     max-width: 1200px;
     margin: 0 auto;
     /* min-height: 400px; */
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
 }
 
 .banner-childs {
